--- a/ExpoSoftware/ClientApp/src/app/User/user-register/user-register.component.html
+++ b/ExpoSoftware/ClientApp/src/app/User/user-register/user-register.component.html
@@ -1,16 +1,16 @@
-<div class="container">
+<div class="container"  >
     <blockquote class="blockquote text-center">
         <p class="mb-0" class="display-3 colorLetras">Registro de usuario</p>
         <footer class="blockquote-footer">Ingrese los datos del usuario a registrar</footer>
     </blockquote>
 
     <form [formGroup]="userGroup">
-        <div class="nput-group input-group-sm mb-3">
-            <div class="input-group mb-3 input divflex">
+        <div class="nput-group input-group-sm mb-3" >
+            <div class="input-group mb-3 input divflex " style="margin-left: 23%;">
                 <div>
                     <span class="input-group-text" id="inputGroup-sizing-default">Usuario</span>
                 </div>
-                <input type="text" placeholder="Usuario" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="userName" [ngClass]="{ 'is-invalid': control.userName.errors && control.userName.touched }"> 
+                <input type="text" placeholder="Usuario" style="margin-right: 45%;" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="userName" [ngClass]="{ 'is-invalid': control.userName.errors && control.userName.touched }"> 
                 <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
                     <div *ngIf="control.userName.errors.required">Ingrese un usuario</div>
@@ -21,11 +21,11 @@
 
             </div>
 
-            <div class="input-group mb-3 input divflex">
+            <div class="input-group mb-3 input divflex " style="margin-left: 23%;">
                 <div>
                     <span class="input-group-text" id="inputGroup-sizing-default">Contraseña</span>
-                </div>
-                <input type="text" placeholder="Contraseña" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="password" [ngClass]="{ 'is-invalid': control.password.errors && control.password.touched }"> 
+                </div>  
+                <input type="text" placeholder="Contraseña" style="margin-right: 45%;" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="password" [ngClass]="{ 'is-invalid': control.password.errors && control.password.touched }"> 
                 <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
                     <div *ngIf="control.password.errors.required">Ingrese una contraseña</div>
@@ -36,11 +36,11 @@
 
             </div>
 
-            <div class="input-group mb-3 input divflex">
+            <div class="input-group mb-3 input divflex " style="margin-left: 23%;">
                 <div>
                     <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
                 </div>
-                <input type="text" placeholder="Email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="email" [ngClass]="{ 'is-invalid': control.email.errors && control.email.touched }"> 
+                <input type="text" placeholder="Email" style="margin-right: 45%;" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="email" [ngClass]="{ 'is-invalid': control.email.errors && control.email.touched }"> 
                 <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
                     <div *ngIf="control.email.errors.required">Ingrese un correo</div>
@@ -51,6 +51,13 @@
 
             </div>
 
+            <div class="text-center">
+
+                <button mat-stroked-button style="border-color: #339240; margin-right: 25px; margin-top: 20px;"  (click)="onSubmit()" [disabled]="userGroup.invalid" >Registrar</button>
+     
+                <button mat-stroked-button style="border-color: #339240; " type="reset" >Limpiar</button>
+     
+          </div>
 
 
         </div>
