--- a/ExpoSoftware/ClientApp/src/app/User/user-login/user-login.component.html
+++ b/ExpoSoftware/ClientApp/src/app/User/user-login/user-login.component.html
@@ -12,7 +12,7 @@
                     <span class="input-group-text" id="inputGroup-sizing-default">Usuario</span>
                 </div>
                 <input type="text" placeholder="Usuario" class="form-control" aria-label="Sizing example input" style="margin-right: 45%;"  aria-describedby="inputGroup-sizing-default" formControlName="userName" [ngClass]="{ 'is-invalid': control.userName.errors && control.userName.touched }"> 
-                <div *ngIf="control.idEstudiante.errors" class="invalid-feedback" style="margin-left: 21%;">
+                <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
                     <div *ngIf="control.userName.errors.required">Ingrese su usuario o correo</div>
                     
@@ -25,7 +25,7 @@
                     <span class="input-group-text" id="inputGroup-sizing-default">Contraseña</span>
                 </div>
                 <input type="password" placeholder="Contraseña" class="form-control" style="margin-right: 45%;"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="password" [ngClass]="{ 'is-invalid': control.password.errors && control.password.touched }"> 
-                <div *ngIf="control.idEstudiante.errors" class="invalid-feedback" style="margin-left: 21%;">
+                <div *ngIf="control.password.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
                     <div *ngIf="control.password.errors.required">Ingrese su contraseña</div>
                     
