--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -161,11 +161,54 @@
 
       <ng-template matStepLabel>Datos del Proyecto</ng-template>
 
+      <div class="row">
+
+
+        <div class="col-sm">
+              
+            <mat-form-field>
+
+              <mat-label>referencia </mat-label>
+              <input matInput formControlName="idProyecto"  required>
+
+            </mat-form-field>
+
+          
+            <mat-form-field>
+              <mat-label>titulo</mat-label>
+              <input matInput  formControlName="titulo" required>
+            </mat-form-field>
+
+
+            
+            <mat-form-field>
+              <mat-label>metodologia</mat-label>
+              <input matInput formControlName="metodologia" required>
+            </mat-form-field>
+
+            
+            <mat-form-field>
+              <mat-label>resumen</mat-label>
+              <input matInput formControlName="resumen" required>
+            </mat-form-field>
+      
+        
+        </div>
+
+
+  
+
+      </div>
+
+
 
 
       <div>
+
         <button mat-button matStepperPrevious>Regresar</button>
         <button mat-button matStepperNext style="margin-left: 80%;">Siguiente</button>
+
+
       </div>
 
 
@@ -178,8 +221,19 @@
 
 
   <mat-step>
+
     <ng-template matStepLabel>Done</ng-template>
     <p>Operacion Terminada</p>
+
+    
+      <div style="margin-bottom: 50px; margin-top: 50px;" class="text-center" >
+
+        <button  (click)="onSubmit()"  class="btn btn-light">Registrar</button>
+
+
+      </div>
+
+
     <div>
       <button mat-button matStepperPrevious>Regresar</button>
       <button mat-button (click)="stepper.reset()" style="margin-left: 80%;">resetear</button>
